--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,32 @@
-<p>login works!</p>
+<!-- <div class="container">
+    <div class="image">
+        <img src="../../../assets/img/bgLoginConsumidor.jpg" alt="">
+    </div>
+    <div class="buttonContainer">
+        <input type="text">
+    </div>
+</div> -->
+
+
+<div class="container">
+    <div class="row">
+        <div class="col-6">
+            <div class="loginContainer">
+                <div class="form">
+                    <h3>Bora participar dessa comunidade de criadores do futuro ?</h3>
+                <div class="form-group">
+                        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Username">
+                    </div>
+                    <div class="form-group">
+                        <input type="password" class="form-control" id="formGroupExampleInput" placeholder="Senha">
+                    </div>
+                    <button data-hover="Bora!"><div>Entrar</div></button>
+                    <h5>Sou novo e quero participar do clube!<a [routerLink]="['/signIn']">Registrar!</a></h5>
+                </div>
+            </div>
+        </div>
+        <div class="col-6">
+            <img class="image" src="../../../assets/img/bgLoginConsumidor.jpg" alt="">
+        </div>
+    </div>
+</div>
