--- a/src/app/pages/navbar/navbar.component.html
+++ b/src/app/pages/navbar/navbar.component.html
@@ -2,16 +2,16 @@
     <div class="inicio" [routerLink]="['/']">
         <p>Início</p>
     </div>
-    <div class="crie" [routerLink]="['/dashboard/:id']">
+    <div class="crie" [routerLink]="['/dashboard/1']">
         <p>Crie aqui sua cerveja</p>
     </div>
-    <div class="comunidade">
+    <div class="comunidade" [routerLink]="['/comunidade']">
         <p>Comunidade</p>
     </div>
-    <div class="login" [routerLink]="['/login']">
+    <div class="login" [routerLink]="['/']">
         <p>Login</p>
     </div>
-    <div class="signin" [routerLink]="['/signIn']">
+    <div class="signin" [routerLink]="['/']">
         <p>Registre-se</p>
     </div>
 </div>
