--- a/src/app/pages/consumidor/dashboard/create-beer/create-beer.component.css
+++ b/src/app/pages/consumidor/dashboard/create-beer/create-beer.component.css
@@ -9,15 +9,59 @@
 }
 
 select {
-  margin-top: 30px;
+  margin-top: 20px;
   width: 100%;
   box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.39);
 }
 
-option:hover,
-option:focus,
-option:active,
-option:focus {
-  color: red;
-  transition:0s;
+button {
+  background: transparent;
+  outline: none;
+  position: relative;
+  box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.39);
+  border: 0;
+  padding: 5px 20px;
+  overflow: hidden;
+  background-color:  rgb(255, 208, 0);
+  width: 100%;
+  height: 40px;
+  margin-bottom: 20px;
+  font-size: x-large;
+  color: #FF0101 ;
+  margin-top: 30px;
+}
+
+/*button:before (attr data-hover)*/
+button:hover:before {
+  opacity: 1;
+  transform: translate(0, 0);
+}
+
+button:before {
+  content: attr(data-hover);
+  position: absolute;
+  top: 0.3em;
+  left: 0;
+  width: 100%;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  font-weight: 800;
+  font-size: .8em;
+  opacity: 0;
+  transform: translate(-100%, 0);
+  transition: all .3s ease-in-out;
+}
+
+/*button div (button text before hover)*/
+button:hover div {
+  opacity: 0;
+  transform: translate(100%, 0)
+}
+
+button div {
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  font-weight: 800;
+  font-size: .8em;
+  transition: all .3s ease-in-out;
 }
