--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -3,6 +3,6 @@
 </div>
 <p>Você é...</p>
 <div class="buttonContainer">
-    <button data-hover="Bora Criar!" [routerLink]="['/login']"><div>Consumidor Amante da Cerveja</div></button>
-    <button data-hover="Bora Produzir!"><div>Empresa</div></button>
+    <button data-hover="Bora Criar!" [routerLink]="['/login/1']"><div>Consumidor Amante da Cerveja</div></button>
+    <button data-hover="Bora Produzir!" [routerLink]="['/login/2']"><div>Empresa</div></button>
 </div>
